Mantis ChangeLog

2004.10.xx  -  0.19.1

- 0002091: [bugtracker] Bugnotes containing urls with the '@' sign in them get mangled (bpfennig)
- 0004326: [bugtracker] Links protected by brackets are not processed properly (bpfennig)
- 0003276: [feature] Add bugnote numbering and bugnote links. (bpfennig)
- 0004383: [localization] Editing a note has language specific note at end of note (bpfennig)
- 0004526: [other] Spaces needed after colons on main page (vboctor)
- 0004558: [custom fields] Custom Fields doesn't display links (bpfennig)
Updated Serbian, Chinese Simplified and Estonian translations

2004.09.12  -  0.19.0

This is a stable release that followed a couple of alpha releases + a release candidate.  Compared to 0.18.3 this release has over 250 enhancements and fixes.  These include some major additions to Mantis including issue relationships, sponsorships, advanced filters, changelog, workflow control, my-view, using ADODB as a database abstraction layer, "forgot password" support, more secure signup with captcha image, security fixes, and various other fixes and enhancements.  All users of previous releases are encouraged to upgrade to this release.

- 0003896: [security] Change default value of $g_view_summary_threshold to MANAGER (vboctor)
- 0004478: [upgrade] database upgrade from 0.18.3 problem: upgrade-ID "filters-db1" does not work on mySQL4.1.3b-beta (jlatour)
- 0004435: [other] Auto-preview of attached images is broken (vboctor)
- 0004470: [other] Strange changes of "Resolution" value (thraxisp)
- 0004523: [filters] SYSTEM NOTICE: Undefined variable: t_target_field in view_filters_page.php (vboctor)
- 0004431: [relationships] Relationship removal is always "duplicate of" in history (masc)
- 0004426: [email] Email notifications to users with language set to "auto" causes errors (thraxisp)
- 0004448: [email] Custom severity and status shown in mail as code (thraxisp)
- 0004321: [localization] New german lang strings (bpfennig)